publish: Merged in imp-agenda2 (pull request #45)
generated from commit ddce66fad8bc2ad2c3b2bacb73678aefea559063

--- a/index.html
+++ b/index.html
@@ -431,39 +431,26 @@ $("body").css("overflow","scroll");
 
     <div class="row">
       <div class="column">
-
         <h3>Tickets</h3>
-
-        <p>Cancellations received before May 31 2015 are entitled to a full refund. Cancellations received after May 31, 2015 are non-refundable.</p>
-
+        <p>We will be refunding cancellations received before May 31 2015 while those received after May 31, 2015 will not be refundable.</p>
         <p>Early Bird tickets are non-refundable.</p>
 
-        <h3>Video/audio recording</h3>
-
-        <p>All presentations and associated materials are the speakers’ intellectual property. Recording for commercial purposes requires permission from both the organizer and the speaker.</p>
-
-        <p>By attending the conference, attendees have agreed to allow the organizer to use images, audio, and video recorded content on site for educational and promotional purposes.</p>
-
+        <h3>Video recording</h3>
+        <p>All talks and materials related to them are the speakers’ intellectual property. Speakers must agree that their talk will be recorded and made available on YouTube.</p>
+        <p>By attending the conference attendees give the organizer permission to use images, audio and video content gathered on site for educational and promotional purposes.</p>
       </div>
       <div class="column">
-
         <h3>Responsibility</h3>
 
-        <p>The participant acknowledges that he/she may not engage in damage claims against the Conference Organizers should the holding of the Conference be hindered or prevented by unexpected political or economic events, natural disaster, the non-appearance of speakers, or other reasons that might necessitate a program change.</p>
-
-        <p>Organizers may cancel the event at any time and tickets will be refunded in full without any additional fees.</p>
-
+        <p>The event participants acknowledge that they may not engage in damage claims against the Conference Organizers as a result of unexpected political or economic events, natural disaster, the non-appearance of speakers or other reasons that might required a change in the event agenda.</p>
+        <p>Organizers have right to cancel the event at any time. In the event of cancelletion, tickets will be refunded in full without any additional fees.</p>
       </div>
       <div class="column">
-
         <h3>Code of conduct</h3>
 
         <p>PolyConf is dedicated to providing a harassment-free conference experience for everyone. We invite you to help us make PolyConf a place that is welcoming and respectful to all participants, so everyone can focus on the conference itself, and the great networking and community richness that can happen when we get together in person. We will do whatever we believe is necessary to ensure that PolyConf is a safe and productive environment for everyone.</p>
-
         <p>Please bring any concerns to the immediate attention of the event staff, or contact Martyna Maszkowska at martyna@nukomeet.com. We thank our attendees for their help in keeping the event welcoming, respectful, and friendly to all participants.</p>
-
         <p>For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the Berlin Code of Conduct.</p>
-
       </div>
 
     </div>
