publish: Merged in julia-talk (pull request #48)
generated from commit 287c1fa762e6e0542e1703acb78bb664e63ac2e0

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -1146,9 +1146,9 @@
                 <div class="from">17:40</div>
                 <div class="to">18:20</div>
               </div>
-              <div class="talk normal">
-                <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <div class="title">TBA</div>
+              <div class="talk keynote">
+                <figure><img src="/assets/agenda/keynote.svg" /></figure>
+                <div class="title">Why System Programming is for Everyone</div>
                 <div class="sub">Julia Evans</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-315">More</a>
@@ -1160,7 +1160,7 @@
             <div id="agenda-modal-id-315" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>TBA</h3>
+                <h3>Why System Programming is for Everyone</h3>
                 <div class="sub">Julia Evans</div>
                 <div class="sub date-time">Day 3, 2 July 2016 &nbsp;&middot;&nbsp; 17:40 - 18:20</div>
                 <div class="excerpt"></div>
@@ -1174,8 +1174,8 @@
                 <div class="from">18:30</div>
                 <div class="to">19:00</div>
               </div>
-              <div class="talk normal">
-                <figure><img src="/assets/agenda/normal.svg" /></figure>
+              <div class="talk keynote">
+                <figure><img src="/assets/agenda/keynote.svg" /></figure>
                 <div class="title">TBA</div>
                 <div class="sub">Andy Wingo</div>
                 
@@ -1370,6 +1370,11 @@
       <div class="sponsor">
         <a href="https://www.womenwhocode.com/berlin">
           <figure><img src="/assets/supporters/women-who-code.png" alt="Women Who Code" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.functionalgeekery.com/">
+          <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
         </a>
       </div>
     </div>
