--- a/speakers/index.html
+++ b/speakers/index.html
@@ -100,7 +100,7 @@
         <div class="text">
 
           <h3>Julia Evans</h3>
-          <p class="desc">Machine Learning Engineer at Stripe</p>
+          <p class="desc">Infrastructure Engineer at Stripe</p>
           <p class="twitter"><i></i>@b0rk</p>
           <ul class="tags">
             
@@ -874,6 +874,11 @@
       <div class="sponsor">
         <a href="https://www.womenwhocode.com/berlin">
           <figure><img src="/assets/supporters/women-who-code.png" alt="Women Who Code" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://www.functionalgeekery.com/">
+          <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
         </a>
       </div>
     </div>
