--- a/index.html
+++ b/index.html
@@ -408,6 +408,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/supporters/women-who-code.png" alt="Women Who Code" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="https://www.functionalgeekery.com/">
+          <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
+        </a>
+      </div>
     </div>
 
     <br><br>
