publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/practical/index.html
+++ b/practical/index.html
@@ -90,6 +90,152 @@
 
     <h1 class="color-blue">Practical information</h1>
 
+    <h3>How to get to the city center from the Poznań Airport?</h3>
+
+    <br>
+
+    <h3 class="color-teal">By bus</h3>
+
+    <p>Poznan Airport is well-connected with the city center by public transport. You will find bus stops right in front of the passenger terminal. One of the  - L - is an express line connecting the airport with the main train station and the secon line - 59 - finishes at Kaponiera Roundabout (directly in the city center, close to the main train station).  It takes around 30 minutes to get from the airport to the city center.</p>
+
+    <h4>Timetables</h4>
+
+    <div class="row">
+      <div class="columns-4 bus">
+        <img src="/assets/bus-l.svg" />
+        <p>Express line L<br>PORT LOTNICZY – DWORZEC GŁÓWNY<br>
+          <a href="http://ztm.poznan.pl/komunikacja/rozklad/#/rozklad/wgLinii/ZTM_MPK/1/3046/L">Bus timetable</a>
+        </p>
+      </div>
+      <div class="columns-4 bus">
+        <img src="/assets/bus-59.svg" />
+        <p>Line 59<br>PORT LOTNICZY – RONDO KAPONIERA<br>
+          <a href="http://ztm.poznan.pl/komunikacja/rozklad/#/rozklad/wgLinii/ZTM_MPK/0/3046/59">Bus timetable</a>
+        </p>
+      </div>
+    </div>
+
+    <h4>Tickets</h4>
+
+    <p>You can buy tickets in ticket vending machine. They are avaliable:</p>
+    <ul class="styled">
+      <li>in the arrival hall - in T3 terminal</li>
+      <li>in the departure hall - in T2 terminal</li>
+      <li>at the bus stop in front of the departure hall</li>
+      <li>in all express L busses and in some units of line 59</li>
+    </ul>
+    <br>
+
+    <p>There is also a possibility of purchasing a ticket through a mobile phone by moBILET (http://www.mobilet.pl/) or SkyCash (http://www.skycash.com/). </p>
+    <p>You can install JAKDOJADE app which helps you to reach destination.</p>
+
+    <h3 class="color-teal">By taxi</h3>
+    <p>Right in front of T3 terminal (arrival hall) you may find a 24/7 taxi stand.</p>
+    <p>And also you can call:</p>
+
+    <ul class="styled">
+      <li>TAXI M1 61 8 222 222</li>
+      <li>TAXI RMI 61 8 219 219</li>
+      <li>RADIO TAXI 61 851 55 15</li>
+    </ul>
+
+    <br>
+    <br>
+
+    <h3>Hotels in Poznań</h3>
+
+    <br>
+
+    <div class="row three-columns hotels">
+
+      <div class="columns-4 hotel">
+
+        <h4>Platinum Palace Residence ****</h4>
+        <p>ul. Reymonta 19<br>
+          60-791 Poznań<br>
+           <a href="http://poznan.platinumpalace.pl/en/" target="_blank">Website</a>
+        </p>
+        <p class="special">Special price for PolyConf attendees</p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Hotel Lech Poznań</h4>
+        <p>ul. Święty Marcin 74<br>
+          61-809 Poznań<br>
+           <a href="http://hotel-lech.poznan.pl/en/home-en/" target="_blank">Website</a>
+        </p>
+        <p class="special">Special price for PolyConf attendees</p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Hotel Rzymski</h4>
+        <p>al. K. Marcinkowskiego 22<br>
+          61-827 Poznań<br>
+          <a href="#" target="_blank">Use this link for special price</a>
+        </p>
+        <p class="special">Special price for PolyConf attendees</p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Puro</h4>
+        <p>ul. Stawna 12<br>
+           61-759 Poznań<br>
+           <a href="http://en.purohotel.pl/poznan" target="_blank">Website</a>
+        </p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Hotel Stare Miasto</h4>
+        <p>ul. Rybaki 36<br>
+          61-884 Poznań<br>
+           <a href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/1/b/" target="_blank">Website</a>
+        </p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Hotel Ikar</h4>
+        <p>ul. Kościuszki 118<br>
+          61-717 Poznań<br>
+           <a href="http://hotelewam.co.uk/621-hotel-ikar-poznan.html" target="_blank">Website</a>
+        </p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Hotel Hill</h4>
+        <p>ul. Zamkowa 1/2<br>61-768 Poznań<br>
+           <a href="http://hillinn.pl/welcome/" target="_blank">Website</a>
+        </p>
+
+      </div>
+
+      <div class="columns-4 hotel">
+
+        <h4>Novotel</h4>
+        <p>pl. Andersa 1<br>61-898 Poznań<br>
+           <a href="http://www.novotel.com/gb/hotel-3376-novotel-poznan-centrum/index.shtml" target="_blank">Website</a>
+        </p>
+
+      </div>
+
+      </div>
+
+
+
+
+
+
   </div>
 
 </section>
@@ -164,7 +310,16 @@
     </div>
 
     <div class="sponsors" id="partners-supporters">
-      <h3>Partners & Supporters</h3>
+      <h3>Supporters</h3>
+      <div class="sponsor">
+        <a href="https://www.jetbrains.com">
+          <figure><img src="/assets/supporters/jetbrains.svg" alt="JetBrains" /></figure>
+        </a>
+      </div>
+    </div>
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners</h3>
       <div class="sponsor">
         <a href="https://djangogirls.org/warsaw/">
           <figure><img src="/assets/supporters/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
