--- a/satellites/index.html
+++ b/satellites/index.html
@@ -191,7 +191,16 @@
     </div>
 
     <div class="sponsors" id="partners-supporters">
-      <h3>Partners & Supporters</h3>
+      <h3>Supporters</h3>
+      <div class="sponsor">
+        <a href="https://www.jetbrains.com">
+          <figure><img src="/assets/supporters/jetbrains.svg" alt="JetBrains" /></figure>
+        </a>
+      </div>
+    </div>
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners</h3>
       <div class="sponsor">
         <a href="https://djangogirls.org/warsaw/">
           <figure><img src="/assets/supporters/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
