--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -124,10 +124,35 @@
           <figure><img src="/assets/sponsors/oberthur.png" alt="Oberthur Technologies" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.pusher.com/">
+          <figure><img src="/assets/sponsors/pusher.png" alt="Pusher" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://codebeat.co/">
+          <figure><img src="/assets/sponsors/codebeat.png" alt="Codebeat" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.careerslab.co/">
+          <figure><img src="/assets/sponsors/careerslab.png" alt="CareersLab" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="partners-supporters">
-      <h3>Partners & Supporters</h3>
+      <h3>Supporters</h3>
+      <div class="sponsor">
+        <a href="https://www.jetbrains.com">
+          <figure><img src="/assets/supporters/jetbrains.svg" alt="JetBrains" /></figure>
+        </a>
+      </div>
+    </div>
+
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners</h3>
       <div class="sponsor">
         <a href="https://djangogirls.org/warsaw/">
           <figure><img src="/assets/supporters/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
