publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -241,7 +241,7 @@
               </div>
               <div class="talk normal">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <div class="title">TBA</div>
+                <div class="title">Lwan project: an experimental, scalable, high-performance HTTP server</div>
                 <div class="sub">Leandro Pereira</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-107">More</a>
@@ -253,7 +253,7 @@
             <div id="agenda-modal-id-107" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>TBA</h3>
+                <h3>Lwan project: an experimental, scalable, high-performance HTTP server</h3>
                 <div class="sub">Leandro Pereira</div>
                 <div class="sub date-time">Day 1, 30 June 2016 &nbsp;&middot;&nbsp; 16:00 - 16:30</div>
                 <div class="excerpt"></div>
@@ -1176,7 +1176,7 @@
               </div>
               <div class="talk keynote">
                 <figure><img src="/assets/agenda/keynote.svg" /></figure>
-                <div class="title">TBA</div>
+                <div class="title">Knit, Chisel, Hack: Building Programs in Guile Scheme</div>
                 <div class="sub">Andy Wingo</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-316">More</a>
@@ -1188,7 +1188,7 @@
             <div id="agenda-modal-id-316" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>TBA</h3>
+                <h3>Knit, Chisel, Hack: Building Programs in Guile Scheme</h3>
                 <div class="sub">Andy Wingo</div>
                 <div class="sub date-time">Day 3, 2 July 2016 &nbsp;&middot;&nbsp; 18:30 - 19:00</div>
                 <div class="excerpt"></div>
