publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -269,7 +269,7 @@
               </div>
               <div class="talk normal">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <div class="title">TBA</div>
+                <div class="title">Dynamics of change: why reactivity matters</div>
                 <div class="sub">Andre Staltz</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-108">More</a>
@@ -281,10 +281,10 @@
             <div id="agenda-modal-id-108" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>TBA</h3>
+                <h3>Dynamics of change: why reactivity matters</h3>
                 <div class="sub">Andre Staltz</div>
                 <div class="sub date-time">Day 1, 30 June 2016 &nbsp;&middot;&nbsp; 16:40 - 17:10</div>
-                <div class="excerpt"></div>
+                <div class="excerpt">When software grows in complexity due to complex requirements, managing concurrent modifications between modules becomes an important challenge. Two general strategies are applicable: passive and reactive. In this talk we will see when each strategy is advantageous, and how the reactive strategy is a sensible default.</div>
               </div>
             </div>
             
@@ -1247,6 +1247,11 @@
       <div class="sponsor">
         <a href="https://lambdawerk.com/">
           <figure><img src="/assets/sponsors/lambdawerk.png" alt="LambdaWerk" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.ironin.pl/index.html#portfolio">
+          <figure><img src="/assets/sponsors/ironin.jpg" alt="iRonin" /></figure>
         </a>
       </div>
     </div>
