--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@ $("body").css("overflow","scroll");
           <figure><img src="/assets/sponsors/lambdawerk.png" alt="LambdaWerk" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.ironin.pl/index.html#portfolio">
+          <figure><img src="/assets/sponsors/ironin.jpg" alt="iRonin" /></figure>
+        </a>
+      </div>
     </div>
 
     <div class="sponsors" id="bronze-sponsors">
