publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/speakers/index.html
+++ b/speakers/index.html
@@ -755,7 +755,7 @@
       </div>
       <div class="sponsor">
         <a href="http://www.ironin.pl/index.html#portfolio">
-          <figure><img src="/assets/sponsors/ironin.jpg" alt="iRonin" /></figure>
+          <figure><img src="/assets/sponsors/ironin.png" alt="iRonin" /></figure>
         </a>
       </div>
     </div>
