publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/practical/index.html
+++ b/practical/index.html
@@ -126,7 +126,7 @@
     </ul>
     <br>
 
-    <p>There is also a possibility of purchasing a ticket through a mobile phone by moBILET (http://www.mobilet.pl/) or SkyCash (http://www.skycash.com/). </p>
+    <p>There is also a possibility of purchasing a ticket through a mobile phone by [moBILET](http://www.mobilet.pl/) or [SkyCash](http://www.skycash.com/). </p>
     <p>You can install JAKDOJADE app which helps you to reach destination.</p>
 
     <h3 class="color-teal">By taxi</h3>
@@ -149,46 +149,29 @@
     <div class="row three-columns hotels">
 
       <div class="columns-4 hotel">
-
         <h4>Platinum Palace Residence ****</h4>
         <p>ul. Reymonta 19<br>
           60-791 Poznań<br>
            <a href="http://poznan.platinumpalace.pl/en/" target="_blank">Website</a>
         </p>
         <p class="special">Special price for PolyConf attendees</p>
-
       </div>
 
       <div class="columns-4 hotel">
-
         <h4>Hotel Lech Poznań</h4>
         <p>ul. Święty Marcin 74<br>
           61-809 Poznań<br>
            <a href="http://hotel-lech.poznan.pl/en/home-en/" target="_blank">Website</a>
         </p>
         <p class="special">Special price for PolyConf attendees</p>
-
       </div>
 
       <div class="columns-4 hotel">
-
-        <h4>Hotel Rzymski</h4>
-        <p>al. K. Marcinkowskiego 22<br>
-          61-827 Poznań<br>
-          <a href="#" target="_blank">Use this link for special price</a>
-        </p>
-        <p class="special">Special price for PolyConf attendees</p>
-
-      </div>
-
-      <div class="columns-4 hotel">
-
         <h4>Puro</h4>
         <p>ul. Stawna 12<br>
            61-759 Poznań<br>
            <a href="http://en.purohotel.pl/poznan" target="_blank">Website</a>
         </p>
-
       </div>
 
       <div class="columns-4 hotel">
@@ -269,7 +252,7 @@
         </a>
       </div>
       <div class="sponsor">
-        <a href="http://www.ironin.pl/index.html#portfolio">
+        <a href="http://www.ironin.pl/">
           <figure><img src="/assets/sponsors/ironin.png" alt="iRonin" /></figure>
         </a>
       </div>
@@ -408,6 +391,11 @@
       <div class="sponsor">
         <a href="https://www.functionalgeekery.com/">
           <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.girlswhotest.pl/">
+          <figure><img src="/assets/supporters/girlswhotest.png" alt="Girls Who Test" /></figure>
         </a>
       </div>
     </div>
