--- a/contact/index.html
+++ b/contact/index.html
@@ -156,7 +156,7 @@
         </a>
       </div>
       <div class="sponsor">
-        <a href="http://www.ironin.pl/index.html#portfolio">
+        <a href="http://www.ironin.pl/">
           <figure><img src="/assets/sponsors/ironin.png" alt="iRonin" /></figure>
         </a>
       </div>
@@ -295,6 +295,11 @@
       <div class="sponsor">
         <a href="https://www.functionalgeekery.com/">
           <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.girlswhotest.pl/">
+          <figure><img src="/assets/supporters/girlswhotest.png" alt="Girls Who Test" /></figure>
         </a>
       </div>
     </div>
