--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $("body").css("overflow","scroll");
         </a>
       </div>
       <div class="sponsor">
-        <a href="http://www.ironin.pl/index.html#portfolio">
+        <a href="http://www.ironin.pl/">
           <figure><img src="/assets/sponsors/ironin.png" alt="iRonin" /></figure>
         </a>
       </div>
@@ -425,6 +425,11 @@ $("body").css("overflow","scroll");
       <div class="sponsor">
         <a href="https://www.functionalgeekery.com/">
           <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://www.girlswhotest.pl/">
+          <figure><img src="/assets/supporters/girlswhotest.png" alt="Girls Who Test" /></figure>
         </a>
       </div>
     </div>
