--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -116,7 +116,7 @@
         </a>
       </div>
       <div class="sponsor">
-        <a href="http://www.ironin.pl/index.html#portfolio">
+        <a href="http://www.ironin.pl/">
           <figure><img src="/assets/sponsors/ironin.png" alt="iRonin" /></figure>
         </a>
       </div>
@@ -243,10 +243,12 @@
           <figure><img src="/assets/supporters/functional-geekery.jpg" alt="Functional Geekery" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://www.girlswhotest.pl/">
+          <figure><img src="/assets/supporters/girlswhotest.png" alt="Girls Who Test" /></figure>
+        </a>
+      </div>
     </div>
-
-
-
   </div>
 </section>
 
