publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -173,6 +173,12 @@
         </a>
       </div>
       
+      <div class="sponsor">
+        <a href="http://www.8thlight.com/">
+          <figure><img src="/assets/sponsors/8thlight.jpg" alt="8th Light" /></figure>
+        </a>
+      </div>
+      
     </div>
 
     <div class="sponsors" id="bronze-sponsors">
