--- a/venue/index.html
+++ b/venue/index.html
@@ -173,6 +173,12 @@
         </a>
       </div>
       
+      <div class="sponsor">
+        <a href="http://www.8thlight.com/">
+          <figure><img src="/assets/sponsors/8thlight.jpg" alt="8th Light" /></figure>
+        </a>
+      </div>
+      
     </div>
 
     <div class="sponsors" id="bronze-sponsors">
