publish: Merged in truepl/16.polyconf.com/piatek (pull request #49)
generated from commit 0f5c1ee4da56b2ca08dd65cf2547d67a0460ff6c

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -52,7 +52,7 @@
     <li ><a href="/speakers"><span>Speakers</span></a></li>
     <li ><a href="/contact"><span>contact</span></a></li>
     <li ><a href="/venue"><span>Venue</span></a></li>
-    <li ><a href="http://jobs.polyconf.com"><span>Jobs</span></a></li>
+    <li ><a href="https://eventil.com/jobs/for/polyconf-16"><span>Jobs</span></a></li>
     <li><a href="#" id="more-text-link"><span>More</span><i><span></span></i></a></li>
   </ul>
 </nav>
