publish: Merged in add-new-sponsors (pull request #50)
generated from commit 1745201e0a379cc1af580b7227ca6b2e665b4e08

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -387,7 +387,7 @@
                 <h3>Dynamic Linking in the Browser</h3>
                 <div class="sub">Guy Bedford</div>
                 <div class="sub date-time">Day 1, 30 June 2016 &nbsp;&middot;&nbsp; 18:20 - 18:50</div>
-                <div class="excerpt">None</div>
+                <div class="excerpt">ES modules form a finalised specification for writing modular code in JavaScript, yet still have to be fully adopted by browsers. We'll look at how ES modules are being supported in browsers and describe some of the implementation questions that still remain, including exploring some of the possibilities of future modular workflows for the browser.</div>
               </div>
             </div>
             
@@ -784,7 +784,7 @@
               </div>
               <div class="talk keynote">
                 <figure><img src="/assets/agenda/keynote.svg" /></figure>
-                <div class="title">TBA</div>
+                <div class="title">The Seif Project</div>
                 <div class="sub">Douglas Crockford</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-216">More</a>
@@ -796,7 +796,7 @@
             <div id="agenda-modal-id-216" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>TBA</h3>
+                <h3>The Seif Project</h3>
                 <div class="sub">Douglas Crockford</div>
                 <div class="sub date-time">Day 2, 1 July 2016 &nbsp;&middot;&nbsp; 18:30 - 19:00</div>
                 <div class="excerpt"></div>
