publish: Merged in add-new-sponsors (pull request #50)
generated from commit 1745201e0a379cc1af580b7227ca6b2e665b4e08

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -188,7 +188,7 @@
               </div>
               <div class="talk normal">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <div class="title">Improving your Craft through Communication</div>
+                <div class="title">Introducing clojure.spec</div>
                 <div class="sub">Arne Brasseur</div>
                 
                 <a class="more tiny button venobox" data-type="inline" data-gall="agenda" href="#agenda-modal-id-106">More</a>
@@ -200,7 +200,7 @@
             <div id="agenda-modal-id-106" style="display: none;">
               <div class="agenda-more typ-wydarzenia-do-zmiany">
                 <figure><img src="/assets/agenda/normal.svg" /></figure>
-                <h3>Improving your Craft through Communication</h3>
+                <h3>Introducing clojure.spec</h3>
                 <div class="sub">Arne Brasseur</div>
                 <div class="sub date-time">Day 1, 30 June 2016 &nbsp;&middot;&nbsp; 14:00 - 14:30</div>
                 <div class="excerpt">Clojure 1.9 will ship with a new standard library: clojure.spec. It provides an extensible syntax for specifying the shape and domain of data. It allows instrumenting functions and macros, so user errors are spotted earlier, and result in better error messages. The real kicker is that specs can form the basis for generative testing.</div>
