--- a/terms/index.html
+++ b/terms/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development."/>
   <meta name="author" content="PolyConf HQ || Designed by Paweł Wodkowski pawel@nukomeet.com"/>
 
+  <meta name="google-site-verification" content="Ss1_weEuifo-z1VYJgs0DnKa8nsxEB8_xoKCsIPMvS4" />
+
   <!-- Open Graph data -->
   <meta property="og:title" content="PolyConf 16 A conference for polyglot programmers" />
   <meta property="og:type" content="website" />
